--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/voice": "^0.16.0",
     "discord.js": "^14.9.0",
+    "distube": "^4.0.4",
     "dotenv": "^16.0.3",
-    "firebase-admin": "^11.7.0",
-    "firebase-functions": "^4.3.1",
+    "libsodium-wrappers": "^0.7.11",
     "nodemon": "^2.0.22"
   }
 }
