--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/opus": "^0.9.0",
     "@discordjs/voice": "^0.16.0",
     "discord.js": "^14.9.0",
     "distube": "^4.0.4",
     "dotenv": "^16.0.3",
-    "libsodium-wrappers": "^0.7.11",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "tweetnacl": "^1.0.3"
   }
 }
