--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "create bot for my channel",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
+    "run dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
