--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "create bot for my channel",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "run dev": "nodemon index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
