--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "create bot for my channel",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -19,5 +19,7 @@
     "ffmpeg-static": "^4.4.1",
     "nodemon": "^2.0.22",
     "tweetnacl": "^1.0.3"
-  }
+  },
+  "devDependencies": {},
+  "keywords": []
 }
