--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "create bot for my channel",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "nodemon index.js --exec babel-node --preset es2015,stage-2",
+    "build":"babel -d",
+    "serve": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -18,6 +20,10 @@
     "ffmpeg-static": "^4.4.1",
     "nodemon": "^2.0.22",
     "tweetnacl": "^1.0.3"
+  },
+  "engines": {
+    "node": "18.16.0",
+    "npm": "9.5.1"
   },
   "devDependencies": {},
   "keywords": []
