--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js --exec babel-node --preset es2015,stage-2",
-    "build":"babel index.js --out-dir lib",
+    "build": "babel index.js --out-dir lib",
     "serve": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -25,6 +25,9 @@
     "node": "18.16.0",
     "npm": "9.5.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/core": "^7.21.8",
+    "@babel/node": "^7.20.7"
+  },
   "keywords": []
 }
