--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.21.8",
-    "@babel/node": "^7.20.7"
+    "@babel/node": "^7.20.7",
+    "babel-cli": "^6.26.0"
   },
   "keywords": []
 }
