--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js --exec babel-node --preset es2015,stage-2",
-    "build": "babel index.js --out-dir lib",
+    "build": "babel index.js --out-dir dist",
     "serve": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
