--- a/.env
+++ b/.env
@@ -1,5 +1,12 @@
-POST=8080
-# SERVER_ID=955506682962772111
-# CHANNEL_ID=955506682962772108
+# server id
+SERVER_ID=955506682962772108
+# bot id
 CLIENT_ID=1089857337981927434
+# bot token
 TOKEN=MTA4OTg1NzMzNzk4MTkyNzQzNA.GWCens.q4OwwKJ7uFe_XAc0IMvb4o3uWB4lbMfu0PX3hU
+
+# role
+# everyone role 
+EVERYONE_ROLE_ID=955506682962772108
+# ADMIN role (<@&1102509728216653864>)
+ADMIN_ROLE_ID=1102509728216653864
