--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ SERVER_ID=955506682962772108
 # bot id
 CLIENT_ID=1089857337981927434
 # bot token
-TOKEN=MTA4OTg1NzMzNzk4MTkyNzQzNA.GWCens.q4OwwKJ7uFe_XAc0IMvb4o3uWB4lbMfu0PX3hU
+TOKEN=MTA4OTg1NzMzNzk4MTkyNzQzNA.GaVcOB.rkQJgpEk_9mT1dazCg7dpSnR9qHxR1ARdv8kP4
 
 # role
 # everyone role 
