--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "create bot for my channel",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
