--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ SERVER_ID=955506682962772108
 # bot id
 CLIENT_ID=1089857337981927434
 # bot token
-TOKEN=MTA4OTg1NzMzNzk4MTkyNzQzNA.GNX5hT.emcrYBlN6FY6ZgHZpMmFo8a55EL8qRzu8WGB0g
+TOKEN=MTA4OTg1NzMzNzk4MTkyNzQzNA.GOEiUX.Z-_6wlmP1w0egCc7zhvZ3gKMkwax7q3fCC9BQk
 
 # role
 # everyone role 
